--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
           <span class="visually-hidden">Next</span>
         </button> 
       </div>
-  
+   <div class="container">
+     <h2>Our <span>Menu</span></h2>
+     <h3><span><i>gluten-free</i></span></h3>
+   
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
