--- a/index.html
+++ b/index.html
@@ -57,7 +57,13 @@
    <div class="container">
      <h2>Our <span>Menu</span></h2>
      <h3><span><i>gluten-free</i></span></h3>
-   
+    <div class="row">
+      <div class="col-4" id="gluten">
+        <img src="images/gluten-freee.jpg" height="200px">
+        <h2><b>small</b></h2>
+        <h3>Ksh 350/=</h3>  
+      </div>
+      
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
