--- a/index.html
+++ b/index.html
@@ -63,7 +63,17 @@
         <h2><b>small</b></h2>
         <h3>Ksh 350/=</h3>  
       </div>
-      
+      <div class="col-4" id="gluten_medium">
+        <img src="images/gluten-freee.jpg" height="200px">
+        <h2><b>medium</b></h2>
+        <h3>Ksh 900/=</h3>  
+      </div>
+      <div class="col-4" id="gluten">
+        <img src="images/gluten-freee.jpg" height="200px">
+        <h2><b>large</b></h2>
+        <h3>Ksh 1300/=</h3>  
+      </div>
+   
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
