--- a/index.html
+++ b/index.html
@@ -73,6 +73,19 @@
         <h2><b>large</b></h2>
         <h3>Ksh 1300/=</h3>  
       </div>
+    </div>
+    <div class="row "> 
+      <h3><span><i>crispy</i></span></h3>
+      <div class="col-4" id="crispy">
+        <img src="images/crispy.jpeg" height="200px">
+        <h2><b>small</b></h2>
+        <h3>Ksh 400/=</h3>  
+    </div>
+    <div class="col-4" id="crispy">
+      <img src="images/crispy.jpeg" height="200px">
+      <h2><b>medium</b></h2>
+      <h3>Ksh 800/=</h3>    
+    </div>
    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
