--- a/index.html
+++ b/index.html
@@ -86,7 +86,33 @@
       <h2><b>medium</b></h2>
       <h3>Ksh 800/=</h3>    
     </div>
-   
+    <div class="col-4" id="crispy">
+      <img src="images/crispy.jpeg" height="200px">
+      <h2><b>large</b></h2>
+      <h3>Ksh 1100/=</h3>   
+    </div>
+    </div>
+    <div class="row">  
+      <h3><span><i>stuffed</i></span></h3>
+       <div class="col-4" id="stuffed">
+       <img src="images/stuffed.jpeg" height="200px">  
+       <h2><b>small</b></h2>
+       <h3>Ksh 450/=</h3>  
+  </div>
+  <div class="col-4" id="stuffed">
+    <img src="images/stuffed.jpeg" height="200px">  
+    <h2><b>medium</b></h2>
+    <h3>Ksh 950/=</h3>  
+ </div>
+ <div class="col-4" id="stuffed">
+    <img src="images/stuffed.jpeg" height="200px"> 
+     <h2><b>large</b></h2>
+    <h3>Ksh 1400/=</h3>  
+ </div>
+ </div>
+  </div>
+</div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
