--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
  </div>
   </div>
 </div>
-
+<div class="container">
+ <form action="" id="order">
+     <h2 style="text-align: center;color: black;"><b> Order Now</b></h2>
+ 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
