added select form

--- a/index.html
+++ b/index.html
@@ -115,7 +115,17 @@
 <div class="container">
  <form action="" id="order">
      <h2 style="text-align: center;color: black;"><b> Order Now</b></h2>
- 
+ <div class="card" style="color: black;">
+     <p>Choose  Pizza Flavour </p>
+     <select class="form-control form-control-sm" id="Flavour">
+       <br>
+       <option>select</option>
+       <option value="veggie pizza">Veggie pizza</option>
+       <option value="Hawaiian pizza">Hawaiian pizza</option>
+       <option value="Pepporoni Pizza">Pepporoni Pizza</option>
+     </select>
+     <p>Choose pizza size</p>
+    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
