added select form

--- a/index.html
+++ b/index.html
@@ -125,7 +125,15 @@
        <option value="Pepporoni Pizza">Pepporoni Pizza</option>
      </select>
      <p>Choose pizza size</p>
-    
+     <select class="form-control form-control-sm" id="Size">
+       <br>
+       <option>select</option>
+       <option value="1300">Large </option>
+       <option value="900"> Medium</option>
+       <option value="350">Small</option>
+     </select>
+   <p>Choose crust type</p> 
+  
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
