added select form

--- a/index.html
+++ b/index.html
@@ -133,6 +133,13 @@
        <option value="350">Small</option>
      </select>
    <p>Choose crust type</p> 
+   <select class="form-control form-control-sm" id="Crust">
+     <option>select</option>
+     <option value="130">Thin crust @ Ksh.130</option>
+     <option value="180">Thick crust @Ksh.180</option>
+     <option value="250">Stuffed crust @Ksh.250</option>
+   </select>
+ <p>Choose the topping </p>
   
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
