--- a/index.html
+++ b/index.html
@@ -186,7 +186,11 @@
          Total Amount: Ksh. <span id="totalAmount"></span>
      </p>
      <br /><br />
-    
+     <button class="btn btn-success" id="Checkout" onclick="myPizza()">Checkout</button>
+     <div class="checkout-info hidden">
+       <h3 id="check">Check form</h3>
+       <form action="" id="checkoutForm">
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
