--- a/index.html
+++ b/index.html
@@ -190,6 +190,14 @@
      <div class="checkout-info hidden">
        <h3 id="check">Check form</h3>
        <form action="" id="checkoutForm">
+<div class="form-group">
+<input type="text" id="name" class="form-control mb-3" placeholder="Name">
+<label for="delivery">Desired Delivery Option</label>
+<select class="form-control" id="OptionDelivery" required>
+<option value="deliver">Home Delivery?</option>
+<option value="collect">Pick Up</option>
+</select>
+</div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
