--- a/index.html
+++ b/index.html
@@ -198,6 +198,10 @@
 <option value="collect">Pick Up</option>
 </select>
 </div>
+<button type="submit" class="btn btn-success" id="final-option">Deliver</button>
+</form>
+</div>
+<div class="deliveryLocation hidden">
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
