--- a/index.html
+++ b/index.html
@@ -202,7 +202,29 @@
 </form>
 </div>
 <div class="deliveryLocation hidden">
-
+<form id="locationForm">
+<h3>Enter your location</h3>
+<div class="form-group">
+<label>Estate</label>
+<input type="text" class="form-control" id="estate" placeholder="Enter Your Name"
+   required />
+</div>
+<div class="form-group">
+<label for="exampleFormControlSelect1">House Number</label>
+<input type="text" class="form-control" id="houseNumber" placeholder="Enter Your Name"
+   required />
+</div>
+​
+<button type="submit" class="btn btn-success" id="submit" >Submit</button>
+</form>
+</div>
+     </div>
+   </div>
+ </div>
+</div>
+​<br>
+    
+    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
